# 3d-space

./: .gitignore  generate_sources.sh  main.cpp  meson.build  package.json  plan.md  wasm.ini
include/: color.h  color.hpp  common.h  cylinder.h  enums.hpp  game.hpp  meson.build  project.cpp  shape.h  space.h  sphere.h  structs.cpp  vector_2d.hpp  vector_3d.hpp  worldobject.h
include/board/: bag.hpp  board.hpp
include/pieces/: abstract_tetris_piece.hpp  i_piece.hpp  j_piece.hpp  l_piece.hpp  o_piece.hpp  piece_factory.hpp  piece_multiarray.h  piece_multiarray.hpp  s_piece.h  s_piece.hpp  t_piece.h  t_piece.hpp  tetris_piece.h  tetris_piece.hpp  z_piece.h  z_piece.hpp
include/render/: button.hpp  camera.hpp  context.hpp  cube.hpp  drawable.hpp  drawable_2d.hpp  drawable_3d.hpp  framework.hpp  line.hpp  polygon.hpp  render_framework.hpp  render_framework_2d.hpp  render_framework_3d.hpp  shader.hpp
include/state/: end_state.hpp  exit_state.hpp  machine.hpp  menu_state.hpp  play_state.hpp  state.hpp
shaders/: fragment_shader.fragmentshader  vertex_shader.vertexshader
src/: color.cpp  cylinder.cpp  game.cpp  meson.build  piece_multiarray.cpp  piece_tracker.cpp  renderer.cpp  sources  space.cpp  sphere.cpp  structs.cpp  t_piece.cpp  vector_3d.cpp  worldobject.cpp
src/board/: bag.cpp  board.cpp
src/pieces/: abstract_tetris_piece.cpp  i_piece.cpp  j_piece.cpp  l_piece.cpp  o_piece.cpp  piece_factory.cpp  piece_multiarray.cpp  s_piece.cpp  t_piece.cpp  tetris_piece.cpp  z_piece.cpp
src/render/: button.cpp  camera.cpp  cube.cpp  drawable.cpp  drawable_2d.cpp  drawable_3d.cpp  framework.cpp  line.cpp  polygon.cpp  render_framework.cpp  render_framework_2d.cpp  render_framework_3d.cpp
src/state/: end_state.cpp  exit_state.cpp  machine.cpp  menu_state.cpp  play_state.cpp  state.cpp
