foo_sources = [
  './src/render/text.cpp',
  './src/render/camera.cpp',
  './src/render/line.cpp',
  './src/render/cube.cpp',
  './src/color.cpp',
  './src/vector_3d.cpp',
  './src/board/board.cpp',
  './src/pieces/s_piece.cpp',
  './src/pieces/tetris_piece.cpp',
  './src/pieces/t_piece.cpp',
  './src/pieces/z_piece.cpp',
  './src/pieces/j_piece.cpp',
  './src/pieces/piece_multiarray.cpp',
  './src/pieces/l_piece.cpp',
]