src_sources = [
'./src/render/polygon.cpp',
'./src/render/render_framework.cpp',
'./src/render/camera.cpp',
'./src/render/line.cpp',
'./src/render/render_framework_3d.cpp',
'./src/render/drawable_3d.cpp',
'./src/render/cube.cpp',
'./src/game.cpp',
'./src/color.cpp',
'./src/vector_3d.cpp',
'./src/state/state.cpp',
'./src/state/menu_state.cpp',
'./src/state/play_state.cpp',
'./src/state/machine.cpp',
'./src/board/board.cpp',
'./src/board/bag.cpp',
'./src/pieces/s_piece.cpp',
'./src/pieces/piece_factory.cpp',
'./src/pieces/i_piece.cpp',
'./src/pieces/o_piece.cpp',
'./src/pieces/tetris_piece.cpp',
'./src/pieces/t_piece.cpp',
'./src/pieces/z_piece.cpp',
'./src/pieces/j_piece.cpp',
'./src/pieces/piece_multiarray.cpp',
'./src/pieces/l_piece.cpp',
]
